Improve Eclipse import compatibility diagnostics